adding file "nutella"

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                       <li> <a href=""> Пиріг з творогом "Сльози ангела" </a></li> 
                       <li> <a href=""> Кекс (фірмовий) </a> </li> 
                       <li> <a href=""> Чізкейк класичний </a></li>
+                      <li> <a href="nutella.html"> Нутелла </a> </li> 
                     </ul>
               </div>
               <div class="article">
