--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="article">
                 <h3 id="first-heading">М'яcні страви</h3> 
                     <ul>
-                       <li> <a href="відбивні.html"> Відбивні </a></li> 
+                       <li> <a href="vidbyvni.html"> Відбивні </a></li> 
                        <li> <a href=""> М'ясо по-французьки </a> </li> 
                        <li> <a href=""> Шашлик </a></li>
                     </ul>
