--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        </div>
     </div>
             <footer>
-          <address> You can contact with author at <a href="https://web.telegram.org/@maryna_paziuk" > <img alt="contact" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" width="30px">  </a>  
+          <address> You can contact with author at <a href="https://web.telegram.org/maryna_paziuk" > <img alt="contact" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" width="30px">  </a>  
           </address>
   </footer>
   </div>
