--- a/nutella.html
+++ b/nutella.html
@@ -63,6 +63,7 @@
             <li>Цукрова пудра - 40 гр.</li>
             <li>Сухе молоко - 20 гр.</li>
             <li>Какао-порошок - 40 гр.</li>
+            <li>Подріблені підсмажені горіхи (за смаком)</li>
         </ol>
         <h2>Інгредієнти (для ванільної): </h2>
         <ol>
@@ -70,8 +71,12 @@
             <li>Олія - 200 мл.</li>
             <li>Цукрова пудра - 40 гр.</li>
             <li>Сухе молоко - 60 гр.</li>
-            <li>Ванілін</li>
+            <li>Ванілін - 2 г.</li>
         </ol>
         <h2>Спосіб приготування: </h2>
         <p> 
-            <ul> <li> </li> </ul>
+            <ul>
+                <li> В глибокій посудині олію, молоко і пудру взбиваємо блендером до загустіння.</li> 
+                <li> В дану суміш додаємо сухе молоко та ванілін/какао і перемішуємо вінчиком до однорідності.</li> 
+            </ul>
+
