--- a/vidbyvni.html
+++ b/vidbyvni.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background-color:rgb(230, 231, 161);
+            background-color:rgb(214, 214, 179);
 
 
         }
@@ -31,6 +31,23 @@
         }
         img {
             margin: 20px;
+        }
+
+        img.telegram {
+            width: 20px;
+            height: 20px;
+            margin-bottom: 0;
+            margin-left: 2px;
+            bottom: 0px;
+            margin-top: 0;
+        }
+
+        address {
+            background-color: beige;
+            width: 100%;
+            text-align: right;
+            font-size: 17px;
+            border-radius: 10px;
         }
 
         @media (min-width: 1056px) {
@@ -80,5 +97,11 @@
         </p>
         
     </div>
+    <footer>
+        <address> You can contact with author at <a href="https://web.telegram.org/maryna_paziuk" > 
+            <img class="telegram" alt="contact" 
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png">  </a>  
+        </address>
+    </footer>
 </body>
 </html>
