Adding new files

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <h3 id="forth-heading">Десерти</h3> 
                     <ul>
                       <li> <a href=""> Пиріг з творогом "Сльози ангела" </a></li> 
-                      <li> <a href=""> Кекс (фірмовий) </a> </li> 
-                      <li> <a href=""> Чізкейк класичний </a></li>
+                      <li> <a href="cake.html"> Кекс (фірмовий) </a> </li> 
+                      <li> <a href="kroshka.html"> Торт "Крошка" </a></li>
                       <li> <a href="nutella.html"> Нутелла </a> </li> 
                     </ul>
               </div>
