--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="article">
                 <h3 id="forth-heading">Десерти</h3> 
                     <ul>
-                      <li> <a href=""> Пиріг з творогом "Сльози ангела" </a></li> 
+                      <li> <a href="pyrih_z_tvorohom.html"> Пиріг з творогом "Сльози ангела" </a></li> 
                       <li> <a href="cake.html"> Кекс (фірмовий) </a> </li> 
                       <li> <a href="kroshka.html"> Торт "Крошка" </a></li>
                       <li> <a href="nutella.html"> Нутелла </a> </li> 
