--- a/kroshka.html
+++ b/kroshka.html
@@ -71,7 +71,7 @@
     <img src="" alt="Крошка" 
     >
     <img src="" 
-    alt="Крошка >
+    alt="Крошка">
     <div class="main">
         <h2>Інгредієнти: </h2>
         <ol>
