--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
        </div>
     </div>
             <footer>
-          <address> You can contact with author at <a href="https://web.telegram.org/maryna_paziuk" > <img alt="contact" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" width="30px">  </a>  
-          </address>
+              <address> You can contact with author at <a href="https://t.me/maryna_paziuk" > 
+                <img class="telegram" alt="contact" 
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png">  </a>  
+            </address>
             </footer>
   </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
