--- a/nutella.html
+++ b/nutella.html
@@ -99,7 +99,7 @@
         </p>
     </div>
     <footer>
-        <address> You can contact with author at <a href="https://web.telegram.org/maryna_paziuk" > 
+        <address> You can contact with author at <a href="https://t.me/maryna_paziuk" > 
             <img class="telegram" alt="contact" 
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png">  </a>  
         </address>
