addinf file "bize"

--- a/beze.html
+++ b/beze.html
@@ -86,11 +86,10 @@
         <h2>Спосіб приготування: </h2>
         <p> 
             <ul>
-                <li> Вбиваємо яйця з цукром міксером до пишної піни. </li> 
-                <li> Додаємо олію, воду, муку + розпушувач.</li> 
-                <li> Ділимо тісто на 2 частини: в першу додаємо ванільний ексракт або цедру лимона, в іншу - 2 ст.л. какао.</li> 
-                <li> В підготовлену форму виливаємо "біле" тісто, а потім шоколадне.</li> 
-                <li> Випікаємо при температурі 180 градусів 30-40 хвилин.</li> 
+                <li> Збиваємо білки міксером до легкої піни та поступово додаємо цукор. </li> 
+                <li> Сіль, лимонну кислоту, муку змішуємо та додаємо до збитих білків.</li> 
+                <li> До готової білкової суміші додаємо підсмажені та подріблені горіхи.</li> 
+                <li> Духовку нагріваємо до 180 градусів та випікаємо при температурі 120 градусів 90 хвилин.</li> 
             </ul>
         </p>
     </div>
