--- a/index.html
+++ b/index.html
@@ -95,21 +95,29 @@
                       <li> <a href="cake.html"> Кекс (фірмовий) </a> </li> 
                       <li> <a href="kroshka.html"> Торт "Крошка" </a></li>
                       <li> <a href="nutella.html"> Нутелла </a> </li> 
+                      <li> <a href="beze.html"> Безе </a> </li>   
                     </ul>
               </div>
               <div class="article">
                 <h3 id="fifth-heading">Суші / Страви з морепродуктами </h3> 
                     <ul>
                       <li> <a href=""> Рол "Каліфорнія" з крабовими паличками </a></li> 
-                      <li> <a href=""> Гаряий чіз-рол </a> </li> 
+                      <li> <a href=""> Гарячий чіз-рол </a> </li> 
                       <li> <a href=""> Паста з морепродуктами </a></li>
                     </ul>
               </div>
               <div class="article">
-                <h3 id="six-heading">Рибні страви </h3> 
+                <h3 id="sixth-heading">Рибні страви </h3> 
                     <ul>
                       <li> <a href=""> Запечена скумбрія з лимоном </a></li> 
                       <li> <a href=""> Фарширований короп </a> </li> 
+                    </ul>
+              </div>
+              <div class="article">
+                <h3 id="seventh-heading">Креми/Соуси </h3> 
+                    <ul>
+                      <li> <a href=""> Заварний  крем </a></li> 
+                      <li> <a href=""> Майонез </a> </li> 
                     </ul>
               </div>
             </div>
