--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="article">
                 <h3 id="seventh-heading">Креми/Соуси </h3> 
                     <ul>
-                      <li> <a href=""> Заварний  крем </a></li> 
+                      <li> <a href="zavarnyi_krem.html"> Заварний  крем </a></li> 
                       <li> <a href=""> Майонез </a> </li> 
                     </ul>
               </div>
