--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                       <li>
                         <a href="#sixth-heading"> Рибні страви</a>
                       </li>
+                      <li>
+                        <a href="seventh-heading"> Креми/Соуси </a>
+                      </li>
+
                    </ul><!-- #nav-list -->
                   </div>
                
@@ -68,7 +72,7 @@
                     <ul>
                        <li> <a href="vidbyvni.html"> Відбивні </a></li> 
                        <li> <a href=""> М'ясо по-французьки </a> </li> 
-                       <li> <a href=""> Шашлик </a></li>
+                       <li> <a href="pizza.html"> Піца </a></li>
                     </ul>
               </div>
               <div class="article">
