--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h3 id="seventh-heading">Креми/Соуси </h3> 
                     <ul>
                       <li> <a href="zavarnyi_krem.html"> Заварний  крем </a></li> 
-                      <li> <a href=""> Майонез </a> </li> 
+                      <li> <a href="mayonez.html"> Майонез </a> </li> 
                     </ul>
               </div>
             </div>
