--- a/zavarnyi_krem.html
+++ b/zavarnyi_krem.html
@@ -68,9 +68,9 @@
     <div class="name">
     <h1>Заварний крем</h1>
     </div>
-    <img src="" alt="Заварний крем" 
+    <img src="https://static.1000.menu/img/content/35527/zavarnoi-krem-v-mikrovolnovke_1560391512_1_max.jpg" alt="Заварний крем" 
     >
-    <img src="" 
+    <img src="https://static.1000.menu/img/content-v2/e1/d9/24100/zavarnoi-krem-na-yaicax_1587977354_15_max.jpg" 
     alt="Заварний крем" >
     <div class="main">
         <h2>Інгредієнти: </h2>
