added new files

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                       <li>
                         <a href="seventh-heading"> Креми/Соуси </a>
                       </li>
+                      <li>
+                        <a href="eighth-heading">Основні страви </a>
+                      </li>
 
                    </ul><!-- #nav-list -->
                   </div>
@@ -90,6 +93,7 @@
                       <li> <a href=""> Салат з куркою та грибами </a></li> 
                       <li> <a href=""> Грецький салат </a> </li> 
                       <li> <a href=""> Салат "Цезар" </a></li>
+                      <li> <a href="morkva.html"> Морква по-корейськи </a></li>
                     </ul>
               </div>
               <div class="article">
@@ -99,7 +103,8 @@
                       <li> <a href="cake.html"> Кекс (фірмовий) </a> </li> 
                       <li> <a href="kroshka.html"> Торт "Крошка" </a></li>
                       <li> <a href="nutella.html"> Нутелла </a> </li> 
-                      <li> <a href="beze.html"> Безе </a> </li>   
+                      <li> <a href="beze.html"> Безе </a> </li>  
+                      <li> <a href="baba.html"> Баба </a></li> 
                     </ul>
               </div>
               <div class="article">
@@ -122,6 +127,13 @@
                     <ul>
                       <li> <a href="zavarnyi_krem.html"> Заварний  крем </a></li> 
                       <li> <a href="mayonez.html"> Майонез </a> </li> 
+                    </ul>
+              </div>
+              <div class="article">
+                <h3 id="eighth-heading">Основні страви </h3> 
+                    <ul>
+                      <li> <a href=""> Вареники (тісто) </a></li> 
+                      <li> <a href=""> Майонез </a> </li> 
                     </ul>
               </div>
             </div>
