--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="seventh-heading"> Креми/Соуси </a>
                       </li>
                       <li>
-                        <a href="eighth-heading">Основні страви </a>
+                        <a href="eighth-heading"> Основні страви </a>
                       </li>
 
                    </ul><!-- #nav-list -->
@@ -132,8 +132,7 @@
               <div class="article">
                 <h3 id="eighth-heading">Основні страви </h3> 
                     <ul>
-                      <li> <a href=""> Вареники (тісто) </a></li> 
-                      <li> <a href=""> Майонез </a> </li> 
+                      <li> <a href="varenyky.html"> Вареники (тісто) </a></li> 
                     </ul>
               </div>
             </div>
