added new files

--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
               <div class="article">
                 <h3 id="fifth-heading">Суші / Страви з морепродуктами </h3> 
                     <ul>
-                      <li> <a href=""> Рол "Каліфорнія" з крабовими паличками </a></li> 
-                      <li> <a href=""> Гарячий чіз-рол </a> </li> 
+                      <li> <a href="rol.html"> Рол "Каліфорнія" з крабовими паличками </a></li> 
                       <li> <a href=""> Паста з морепродуктами </a></li>
                     </ul>
               </div>
@@ -133,6 +132,7 @@
                 <h3 id="eighth-heading">Основні страви </h3> 
                     <ul>
                       <li> <a href="varenyky.html"> Вареники (тісто) </a></li> 
+                      <li> <a href="chebureky.html"> Чебуреки (тісто) </a></li> 
                     </ul>
               </div>
             </div>
