--- a/chebureky.html
+++ b/chebureky.html
@@ -68,8 +68,8 @@
     <div class="name">
     <h1> Чебуреки (тісто)</h1>
     </div>
-    <img src="" alt="Чебуреки">
-    <img src="" alt="Чебуреки">
+    <img src="https://eda.ru/img/eda/c620x415i/s1.eda.ru/StaticContent/Photos/151124224236/161018194312/p_O.jpg" alt="Чебуреки">
+    <img src="https://www.svoimirykami.club/upload/iblock/f4d/f4d4038b16336c59084cd8e5db8185b2.jpg" alt="Чебуреки">
     <div class="main">
         <h2>Інгредієнти (для хрустких з бульбашками): </h2>
         <ol>
