--- a/rol.html
+++ b/rol.html
@@ -68,8 +68,8 @@
     <div class="name">
     <h1> Рол "Каліфорнія"</h1>
     </div>
-    <img src="" alt="Рол">
-    <img src="" 
+    <img src="https://i.ytimg.com/vi/CEADVnU4jco/maxresdefault.jpg" alt="Рол">
+    <img src="https://irecommend.ru/sites/default/files/product-images/1/califorinia_roll.jpg" 
     alt="Рол" >
     <div class="main">
         <h2>Інгредієнти: </h2>
